Wrap in article tag
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/tests/sections-001/expected.html
+++ b/tests/sections-001/expected.html
@@ -3,10 +3,10 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <link href="test.css" rel="stylesheet" type="text/css"/>
 </head>
-<body>
-<p>main text main text citet example: <a href="#XTest:Book">LastName</a>&nbsp;[<a href="#XTest:Book">1900</a>]
+<body><article>
+<p>main text main text citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a>
 main text main text main main text main text main text(don&rsquo;t forget
-the half-space, citep:) ctanchor [<a href="#XTest:Book">LastName</a>,&nbsp;<a href="#XTest:Book">1900</a>].
+the half-space, citep:) ctanchor&thinsp;[<a href="#XTest:Book">LastName,&nbsp;1900</a>].
 text main text main text main text main text.</p>
 <h3 class="likesectionHead"><a id="x1-1000" name="x1-1000"></a>References</h3>
 <div class="thebibliography">
@@ -16,4 +16,4 @@ IsbnTag.</p>
 </div>
 
 
-</body></html>
+</article></body></html>
