--- a/tests/footnote-001/expected.html
+++ b/tests/footnote-001/expected.html
@@ -3,8 +3,8 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <link href="test.css" rel="stylesheet" type="text/css"/>
 </head>
-<body>
+<body><article>
 <p>main text main text main text main text ftanchor<sup class="textsuperscript">1</sup> <span class="sidenote"><sup class="textsuperscript">1</sup>Some footnote text</span></p>
 
 
-</body></html>
+</article></body></html>
