Added ndash in expected output
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/tests/citation-003/expected.html
+++ b/tests/citation-003/expected.html
@@ -15,7 +15,7 @@ Towards composable concurrency abstractions. In <em>Proc. of the
 PLACES Workshop</em>, volume 155, 2014.</p>
 <p class="bibitem"><span class="biblabel"><a id="XCastagnaECOOP2013" name="XCastagnaECOOP2013"></a><span class="bibsp">&nbsp;&nbsp;&nbsp;</span></span>S.&nbsp;Tasharofi,
 P.&nbsp;Dinges, and R.&nbsp;E. Johnson. Why do scala developers mix
-the actor model with other concurrency models? In <em>ECOOP 2013
+the actor model with other concurrency models? In <em>ECOOP 2013 &ndash;
 Object-Oriented Programming</em>, volume 7920. 2013.</p>
 </div>
 
