Fix handling of links to citations
In the current version of tex4ht there’s a <span class=‘cite’> which breaks some of my clean up.

This change should fix this.

It changes slightly the expectations of the tests, but this should be fine.
It’s either whitespace, or what looks like improvements/more consistent linking.

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/tests/citation-001/expected.html
+++ b/tests/citation-001/expected.html
@@ -4,8 +4,7 @@
 <link href="test.css" rel="stylesheet" type="text/css"/>
 </head>
 <body><article>
-<p>main text citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a>
-main text</p>
+<p>main text citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a> main text</p>
 <p>main text(don&rsquo;t forget the half-space, citep:) ctanchor&thinsp;[<a href="#XTest:Book">LastName,&nbsp;1900</a>]. text main.</p>
 <h3 class="likesectionHead"><a id="x1-1000" name="x1-1000"></a>References</h3>
 <div class="thebibliography">
