--- a/tests/citation-002/expected.html
+++ b/tests/citation-002/expected.html
@@ -4,13 +4,16 @@
 <link href="test.css" rel="stylesheet" type="text/css"/>
 </head>
 <body><article>
-<p>citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a>, LastName1 et&nbsp;al.&nbsp;[<a href="#XTest:Inproceedings">2005</a>, <a href="#XTest:Article">2013</a>].</p>
-<p>ctanchor&thinsp;[<a href="#XTest:Book">LastName,&nbsp;1900</a>, LastName1 et&nbsp;al., <a href="#XTest:Inproceedings">2005</a>, <a href="#XTest:Article">2013</a>].</p>
+<p>citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a>, LastName1
+et&nbsp;al.&nbsp;[<a href="#XTest:Inproceedings">2005</a>, <a href="#XTest:Article">2013</a>].</p>
+<p>ctanchor&thinsp;[<a href="#XTest:Book">LastName,&nbsp;1900</a>, <a href="#XTest:Inproceedings">LastName1
+et&nbsp;al.,&nbsp;2005</a>, <a href="#XTest:Article">2013</a>].</p>
 <p>citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a>.</p>
 <p>ctanchor&thinsp;[<a href="#XTest:Book">LastName,&nbsp;1900</a>].</p>
-<p>citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a>, <a href="#XTest:Inproceedings">LastName1 et&nbsp;al.&nbsp;[2005]</a>.</p>
-<p>ctanchor&thinsp;[LastName1
-et&nbsp;al., <a href="#XTest:Inproceedings">2005</a>, <a href="#XTest:Article">2013</a>].</p>
+<p>citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a>, <a href="#XTest:Inproceedings">LastName1
+et&nbsp;al.&nbsp;[2005]</a>.</p>
+<p>ctanchor&thinsp;[<a href="#XTest:Inproceedings">LastName1
+et&nbsp;al.,&nbsp;2005</a>, <a href="#XTest:Article">2013</a>].</p>
 <h3 class="likesectionHead"><a id="x1-1000" name="x1-1000"></a>References</h3>
 <div class="thebibliography">
 <p class="bibitem"><span class="biblabel"><a id="XTest:Book" name="XTest:Book"></a><span class="bibsp">&nbsp;&nbsp;&nbsp;</span></span>F.&nbsp;LastName.
