--- a/tests/sections-001/expected.html
+++ b/tests/sections-001/expected.html
@@ -4,10 +4,9 @@
 <link href="test.css" rel="stylesheet" type="text/css"/>
 </head>
 <body><article>
-<p>main text main text citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a>
-main text main text main main text main text main text(don&rsquo;t forget
-the half-space, citep:) ctanchor&thinsp;[<a href="#XTest:Book">LastName,&nbsp;1900</a>].
-text main text main text main text main text.</p>
+<p>main text main text citet example: <a href="#XTest:Book">LastName&nbsp;[1900]</a> main text main text main main text
+main text main text(don&rsquo;t forget the half-space, citep:) ctanchor&thinsp;[<a href="#XTest:Book">LastName,&nbsp;1900</a>]. text main text main text main text
+main text.</p>
 <h3 class="likesectionHead"><a id="x1-1000" name="x1-1000"></a>References</h3>
 <div class="thebibliography">
 <p class="bibitem"><span class="biblabel"><a id="XTest:Book" name="XTest:Book"></a><span class="bibsp">&nbsp;&nbsp;&nbsp;</span></span>F.&nbsp;LastName.
