Fix unwrapping of abstract, where the structure changed slightly
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/tests/header-abstract-001/expected.html
+++ b/tests/header-abstract-001/expected.html
@@ -9,8 +9,8 @@ Number2" name="author"/></head>
 Number2</div>
 <br/>
 <div class="date"></div>
-<div class="abstract"><h3>Abstract</h3>
-
+<div class="abstract">
+<h3 class="abstracttitle">Abstract</h3>
 <p>abstract abstract abstract abstract abstract
 abstract abstract abstract abstract
 abstract abstract abstract abstract abstract abstract
