Remove the unnecessary class='url' from a tags
Added resources folder with ACM template, and add the citation-004 test.

Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/tests/citation-002/expected.html
+++ b/tests/citation-002/expected.html
@@ -25,7 +25,7 @@ F.&nbsp;LastName2, and F.&nbsp;LastName3. Title. In
 doi: Doi.</p>
 <p class="bibitem"><span class="biblabel"><a id="XTest:Article" name="XTest:Article"></a><span class="bibsp">&nbsp;&nbsp;&nbsp;</span></span>F.&nbsp;LastName1,
 F.&nbsp;LastName2, and F.&nbsp;LastName3. Title. <em>Journal</em>,
-45(4): 1&ndash;4, Aug. 2013. ISSN Issn. doi: Doi. URL <a class="url" href="http://url">http://url</a>.</p>
+45(4): 1&ndash;4, Aug. 2013. ISSN Issn. doi: Doi. URL <a href="http://url">http://url</a>.</p>
 </div>
 
 
