Update expected result

--- a/tests/citation-004/expected.html
+++ b/tests/citation-004/expected.html
@@ -8,13 +8,12 @@
 <p>Test</p>
 <p>&nbsp; ACM Reference
 Format:</p>
-<p>. 2022. Test.
+<p>. 2023. Test.
 In <em>Proceedings
 of ACM Conference&nbsp;(Conference&rsquo;17)</em><em>.</em>&nbsp;ACM,
 New York, NY,
 USA&nbsp;,
-1&nbsp;page. <a href="https://doi.org//@acmDOI">https://doi.org/'
-@acmDOI</a></p>
+1&nbsp;page. <a href="https://doi.org//@acmDOI">https://doi.org/\@acmDOI</a></p>
 </div>
 <p>Marr and Ducasse&nbsp;[<a href="#XMarr:2015:MTPE">1</a>]
 References<a id="likesection.1" name="likesection.1"></a><a id="x1-2x" name="x1-2x"></a><a id="Q1-1-0" name="Q1-1-0"></a></p>
@@ -38,10 +37,10 @@ others than ACM must be honored. Abstracting with credit is permitted.
 To copy otherwise, or republish, to post on servers or to redistribute to
 lists, requires prior specific permission and/or a fee. Request permissions
 from permissions@acm.org. Conference&rsquo;17, July 2017,
-Washington, DC, USA &copy;&nbsp;2022&nbsp;Association for Computing
+Washington, DC, USA &copy;&nbsp;2023&nbsp;Association for Computing
 Machinery.<br class="newline"/>
 ACM&nbsp;ISBN&nbsp;978-x-xxxx-xxxx-x/YY/MM&hellip;$15.00<br class="newline"/>
-<a href="https://doi.org//@acmDOI">https://doi.org/' @acmDOI</a>
+<a href="https://doi.org//@acmDOI">https://doi.org/\@acmDOI</a>
 
 
 </article></body></html>
