Remove line anchors in code

--- a/tests/listing-002/expected.html
+++ b/tests/listing-002/expected.html
@@ -8,10 +8,10 @@
 <figure>
 <div>
 <div class="linenumbers">1 2 3 4</div>
-<pre><code><a id="x1-2r1"></a>123456789
-<a id="x1-3r2"></a>  34   89
-<a id="x1-4r3"></a>12  567
-<a id="x1-5r4"></a>---------
+<pre><code>123456789
+  34   89
+12  567
+---------
    
    </code></pre></div>
 </figure>
