--- a/tests/citation-004/expected.html
+++ b/tests/citation-004/expected.html
@@ -1,5 +1,5 @@
 <html><head>
-<title></title>
+<title>Test</title>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <link href="test.css" rel="stylesheet" type="text/css"/>
 </head>
@@ -13,7 +13,7 @@ In <em>Proceedings
 of ACM Conference&nbsp;(Conference&rsquo;17)</em><em>.</em>&nbsp;ACM,
 New York, NY,
 USA&nbsp;,
-1&nbsp;page. <a href="https://doi.org//@acmDOI">https://doi.org/\@acmDOI</a></p>
+2&nbsp;pages. <a href="https://doi.org//@acmDOI">https://doi.org/\@acmDOI</a></p>
 </div>
 <p>Marr and Ducasse&nbsp;[<a href="#XMarr:2015:MTPE">1</a>]
 References<a id="likesection.1" name="likesection.1"></a><a id="x1-2x" name="x1-2x"></a><a id="Q1-1-0" name="Q1-1-0"></a></p>
