--- a/tests/cleveref-001/expected.html
+++ b/tests/cleveref-001/expected.html
@@ -13,21 +13,21 @@ In <em>Proceedings
 of ACM Conference&nbsp;(Conference&rsquo;17)</em><em>.</em>&nbsp;ACM,
 New York, NY,
 USA&nbsp;,
-2&nbsp;pages. <a href="https://doi.org//@acmDOI">https://doi.org/'
-@acmDOI</a></p>
+2&nbsp;pages. <a href="https://doi.org//@acmDOI">https://doi.org/\@acmDOI</a></p>
 </div>
 <section>
 <h2>1 &nbsp; <a id="x1-10001"></a>Intro</h2>
-<p>intro intro intro intro intro intro intro intro <a href="#x1-10001">section&nbsp;1</a> intro intro intro intro intro intro
-intro intro <a href="#x1-20002">section&nbsp;2</a> intro intro
-intro intro intro intro intro intro</p>
+<p>intro intro intro intro intro intro intro intro
+section&nbsp;<a href="#x1-10001">1</a> intro intro intro intro
+intro intro intro intro section&nbsp;<a href="#x1-20002">2</a>
+intro intro intro intro intro intro intro intro</p>
 </section>
 <section>
 <h2>2 &nbsp; <a id="x1-20002"></a>Conclusion</h2>
 <p>conc conc conc conc conc conc conc conc conc conc conc conc conc
-conc conc <a href="#x1-10001">section&nbsp;1</a> conc conc conc
+conc conc section&nbsp;<a href="#x1-10001">1</a> conc conc conc
 conc conc conc conc conc conc conc conc conc conc conc conc
-<a href="#x1-20002">section&nbsp;2</a> conc conc conc conc conc
+section&nbsp;<a href="#x1-20002">2</a> conc conc conc conc conc
 conc conc conc conc conc conc conc conc conc conc</p>
 </section>
 ____________________________________________ Permission to make digital or hard
@@ -42,7 +42,7 @@ from permissions@acm.org. Conference&rsquo;17, July 2017,
 Washington, DC, USA &copy;&nbsp;2023&nbsp;Association for Computing
 Machinery.<br class="newline"/>
 ACM&nbsp;ISBN&nbsp;978-x-xxxx-xxxx-x/YY/MM&hellip;$15.00<br class="newline"/>
-<a href="https://doi.org//@acmDOI">https://doi.org/' @acmDOI</a>
+<a href="https://doi.org//@acmDOI">https://doi.org/\@acmDOI</a>
 
 
 </article></body></html>
