--- a/tests/cleveref-002/expected.html
+++ b/tests/cleveref-002/expected.html
@@ -12,16 +12,17 @@ Number2</div>
 </header>
 <section>
 <h2>1 &nbsp; <a id="x1-10001"></a>Intro</h2>
-<p>intro intro intro intro intro intro intro intro <a href="#x1-10001">section&nbsp;1</a> intro intro intro intro intro intro
-intro intro <a href="#x1-20002">section&nbsp;2</a> intro intro
-intro intro intro intro intro intro</p>
+<p>intro intro intro intro intro intro intro intro
+section&nbsp;<a href="#x1-10001">1</a> intro intro intro intro
+intro intro intro intro section&nbsp;<a href="#x1-20002">2</a>
+intro intro intro intro intro intro intro intro</p>
 </section>
 <section>
 <h2>2 &nbsp; <a id="x1-20002"></a>Conclusion</h2>
 <p>conc conc conc conc conc conc conc conc conc conc conc conc conc
-conc conc <a href="#x1-10001">section&nbsp;1</a> conc conc conc
+conc conc section&nbsp;<a href="#x1-10001">1</a> conc conc conc
 conc conc conc conc conc conc conc conc conc conc conc conc
-<a href="#x1-20002">section&nbsp;2</a> conc conc conc conc conc
+section&nbsp;<a href="#x1-20002">2</a> conc conc conc conc conc
 conc conc conc conc conc conc conc conc conc conc</p>
 </section>
 
